Add basic HASS cover integration

--- a/custom_components/wayzn/manifest.json
+++ b/custom_components/wayzn/manifest.json
@@ -4,9 +4,9 @@
   "codeowners": ["@aijayadams"],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://github.com/aijayadams/wayzn_client",
+  "documentation": "https://github.com/aijayadams/wayzn",
   "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/aijayadams/wayzn_client/issues",
+  "issue_tracker": "https://github.com/aijayadams/wayzn/issues",
   "requirements": ["requests>=2.25.0"],
   "version": "0.1.0"
 }
